Changed the loading animation

--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
         <small>seconds</small>
       </div>
     </div>
-    <img
-      src="./img/spinner.gif"
-      alt="Loading..."
-      id="loading"
-      class="loading"
-    />
+    <div class="center-body">
+      <div class="loader-circle-24" id="loading" class="loading"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
